bear:
Fixed a problem with the property page updating while the pidparser was restarting.

Added a File Load feature to the ITSFileSource Interface as well as a button to the TSFileSource Property page. You can now change the file being played on the fly.
Added a auto reload feature for Timeshifting files where the TSFileSource fiiter will restart if the timeshift file changes size shuch as in a restart of the fileWriter filter.
Isolated the pidArray from the TSFileSourcePin class functions so it would reduce accessing conflicts.
added in some delete code in the MultiFileWriter class to delete the file before it is reused. This eliminates any delay issues due to Read/Write conflicts. 

Fixed the auto pid parsing problem with the MultiFileWriter.
Removed the extra RefreshTSBufferFile() calls from the MulitfileWriter as they seem to be causing problems.
Added a seperate getFilePointer() & setFilePointer() calls to the fileWriters to reduce the need for special code for the different filewriters.

Replaced the class Destructor calls in all the code with delete.
Added CAMThreads to both prop pages for regular updating.

Fixed the GetAvailable function to return correct times.
Replaced the class Destructors in the load() function with delete.
Disabled the auto pid parse code as its still buggy for Timeshifting.
Fixed the line of code to update the duration, re converting to ref time rather than pcr time.
 
Added a property page to the TSFileSink Filter.
Added settings to the registry for the TSFileSink filter.

Added locking code to the pidparser to prevent the pid array from being accessed while its being updated.
changed the setpointer calls from FILE_BEGIN to FILE_END.
Enabled the auto pid reparsing code to check pids every 5sec.

nate:
Changes to MultiFileReader
- Fixed problem preventing second time play.
- Fixed problem of new files added having the wrong file ID.
- Fixed problem of not working when file was opened with files Removed > 0