@@ -71,8 +71,7 @@ BEGIN
     GROUPBOX        "Program Infomation",IDC_STATIC,7,7,111,205,BS_CENTER
     LTEXT           "Duration",IDC_STATIC,13,16,30,10
     EDITTEXT        IDC_DURATION,13,26,99,13,ES_AUTOHSCROLL | ES_READONLY
-    LTEXT           "File Bit Rate",IDC_STATIC,14,41,65,8
-    EDITTEXT        IDC_DATARATE,13,49,100,13,ES_AUTOHSCROLL | ES_READONLY
+    LTEXT           "PCR ~ PTS",IDC_STATIC,14,41,49,8
     LTEXT           "PMT",IDC_STATIC,67,80,15,8
     EDITTEXT        IDC_PMT,86,78,27,12,ES_AUTOHSCROLL | ES_READONLY
     LTEXT           "PCR",IDC_STATIC,67,94,15,8
@@ -153,6 +152,9 @@ BEGIN
     CONTROL         "TSFileSource",IDC_TSFSCLOCK,"Button",BS_AUTORADIOBUTTON | 
                     WS_GROUP,215,154,65,8
     PUSHBUTTON      "&Change File Name",IDC_LOAD,47,15,65,10
+    LTEXT           "File Bit Rate",IDC_STATIC,68,41,65,8
+    EDITTEXT        IDC_DATARATE,68,49,45,13,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_CURR,14,49,48,12,ES_AUTOHSCROLL | ES_READONLY
 END
 
 IDD_SINKPROPPAGE DIALOG DISCARDABLE  0, 0, 239, 166
